// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsBar should render with just \`done\` 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-bwzfXH kcbIsG",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa jXGyXz",
          "title": "txtNew: 0 (0%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa OjfVl",
            "title": "txtIndeterminate: 0 (0%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Object {
            "attribs": Object {
              "class": "sc-bdVaJa cblSdJ",
              "title": "txtDone: 3 (100%)",
            },
            "children": Array [
              Object {
                "data": "3",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa OjfVl",
          "title": "txtIndeterminate: 0 (0%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa cblSdJ",
            "title": "txtDone: 3 (100%)",
          },
          "children": Array [
            Object {
              "data": "3",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa jXGyXz",
            "title": "txtNew: 0 (0%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa cblSdJ",
          "title": "txtDone: 3 (100%)",
        },
        "children": Array [
          Object {
            "data": "3",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa OjfVl",
            "title": "txtIndeterminate: 0 (0%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Object {
            "attribs": Object {
              "class": "sc-bdVaJa jXGyXz",
              "title": "txtNew: 0 (0%)",
            },
            "children": Array [
              Object {
                "data": "0",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`PointsBar should render with just \`indeterminate\` 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-bwzfXH kcbIsG",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa jXGyXz",
          "title": "txtNew: 0 (0%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa DDZHd",
            "title": "txtIndeterminate: 2 (100%)",
          },
          "children": Array [
            Object {
              "data": "2",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Object {
            "attribs": Object {
              "class": "sc-bdVaJa jTJcjC",
              "title": "txtDone: 0 (0%)",
            },
            "children": Array [
              Object {
                "data": "0",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa DDZHd",
          "title": "txtIndeterminate: 2 (100%)",
        },
        "children": Array [
          Object {
            "data": "2",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa jTJcjC",
            "title": "txtDone: 0 (0%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa jXGyXz",
            "title": "txtNew: 0 (0%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa jTJcjC",
          "title": "txtDone: 0 (0%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa DDZHd",
            "title": "txtIndeterminate: 2 (100%)",
          },
          "children": Array [
            Object {
              "data": "2",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Object {
            "attribs": Object {
              "class": "sc-bdVaJa jXGyXz",
              "title": "txtNew: 0 (0%)",
            },
            "children": Array [
              Object {
                "data": "0",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`PointsBar should render with just \`new\` 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-bwzfXH kcbIsG",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa jkFncO",
          "title": "txtNew: 1 (100%)",
        },
        "children": Array [
          Object {
            "data": "1",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa OjfVl",
            "title": "txtIndeterminate: 0 (0%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Object {
            "attribs": Object {
              "class": "sc-bdVaJa jTJcjC",
              "title": "txtDone: 0 (0%)",
            },
            "children": Array [
              Object {
                "data": "0",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa OjfVl",
          "title": "txtIndeterminate: 0 (0%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa jTJcjC",
            "title": "txtDone: 0 (0%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa jkFncO",
            "title": "txtNew: 1 (100%)",
          },
          "children": Array [
            Object {
              "data": "1",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa jTJcjC",
          "title": "txtDone: 0 (0%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa OjfVl",
            "title": "txtIndeterminate: 0 (0%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Object {
            "attribs": Object {
              "class": "sc-bdVaJa jkFncO",
              "title": "txtNew: 1 (100%)",
            },
            "children": Array [
              Object {
                "data": "1",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`PointsBar should render with props 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-bwzfXH kcbIsG",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa dnCOiJ",
          "title": "txtNew: 1 (17%)",
        },
        "children": Array [
          Object {
            "data": "1",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa kQlXgC",
            "title": "txtIndeterminate: 2 (33%)",
          },
          "children": Array [
            Object {
              "data": "2",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Object {
            "attribs": Object {
              "class": "sc-bdVaJa kQOELF",
              "title": "txtDone: 3 (50%)",
            },
            "children": Array [
              Object {
                "data": "3",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa kQlXgC",
          "title": "txtIndeterminate: 2 (33%)",
        },
        "children": Array [
          Object {
            "data": "2",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa kQOELF",
            "title": "txtDone: 3 (50%)",
          },
          "children": Array [
            Object {
              "data": "3",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa dnCOiJ",
            "title": "txtNew: 1 (17%)",
          },
          "children": Array [
            Object {
              "data": "1",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa kQOELF",
          "title": "txtDone: 3 (50%)",
        },
        "children": Array [
          Object {
            "data": "3",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa kQlXgC",
            "title": "txtIndeterminate: 2 (33%)",
          },
          "children": Array [
            Object {
              "data": "2",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Object {
            "attribs": Object {
              "class": "sc-bdVaJa dnCOiJ",
              "title": "txtNew: 1 (17%)",
            },
            "children": Array [
              Object {
                "data": "1",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`PointsBar should render without throwing an error 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-bwzfXH kcbIsG",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa lbHqLr",
          "title": "txtNew: 0 (NaN%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa gbhemY",
            "title": "txtIndeterminate: 0 (NaN%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Object {
            "attribs": Object {
              "class": "sc-bdVaJa jepMUv",
              "title": "txtDone: 0 (NaN%)",
            },
            "children": Array [
              Object {
                "data": "0",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa gbhemY",
          "title": "txtIndeterminate: 0 (NaN%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "sc-bdVaJa jepMUv",
            "title": "txtDone: 0 (NaN%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa lbHqLr",
            "title": "txtNew: 0 (NaN%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "sc-bdVaJa jepMUv",
          "title": "txtDone: 0 (NaN%)",
        },
        "children": Array [
          Object {
            "data": "0",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "sc-bdVaJa gbhemY",
            "title": "txtIndeterminate: 0 (NaN%)",
          },
          "children": Array [
            Object {
              "data": "0",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Object {
            "attribs": Object {
              "class": "sc-bdVaJa lbHqLr",
              "title": "txtNew: 0 (NaN%)",
            },
            "children": Array [
              Object {
                "data": "0",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "title": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "title": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "title": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "title": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "title": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "title": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
